<resources>
    <string name="app_name" translatable="false">SMS Forward</string>

    <string name="menu_info_contact">Manage contacts</string>

    <string name="redirectlist_info_delete_title">Delete redirection</string>
    <string name="redirectlist_info_delete_content">Are you sure you want to delete this redirection?</string>
    <string name="redirectlist_empty_redirection_list">Empty redirection list</string>
    <string name="redirectlist_redirection_deactivated">Redirection deactivated</string>
    <string name="redirectlist_redirection_activated">Redirection activated</string>

    <string name="addredirect_info_automatically_redirect_sms_from">Automatically redirect SMS from</string>
    <string name="addredirect_info_to">to</string>
    <string name="addredirect_info_add">Add</string>
    <string name="addredirect_info_sms_redirect_confirmation">SMS redirected from %1$s to %2$s</string>
    <string name="addredirect_info_enable_regex_mode">Enable regex mode</string>
    <string name="addredirect_warning_permission_refused">The application need to access and send SMS in order to redirect</string>
    <string name="addredirect_error_source_and_redirection_must_be_different">Source and destination must differs</string>
    <string name="addredirect_error_empty_source">Empty source</string>
    <string name="addredirect_error_invalid_source">Invalid source</string>
    <string name="addredirect_error_empty_destination">Empty destination</string>
    <string name="addredirect_error_invalid_destination">Invalid destination</string>
    <string name="addredirect_error_invalid_regex">Invalid regex</string>

    <string name="notification_info_sms_received_from">[%1$s]: %2$s</string>
    <string name="notification_info_sms_now_redirected">SMS are now being forwarded.</string>

    <string name="about_info_title">About</string>
    <string name="about_info_version">Version %s</string>
    <string name="about_info_gitlab" translatable="false">Gitlab</string>
    <string name="about_info_license">Licensed under GNU GPLv3</string>
    <string name="about_info_app_description">SMS Forward is a simple app that allows you to redirect SMS</string>
    <string name="about_info_developers">Developed by Pierre Duchemin</string>
    <string name="about_info_images">Images by unDraw</string>
    <string name="about_FAQ_title">FAQ</string>
    <string name="about_question1">Why would I need this app?</string>
    <string name="about_answer1">This application have been developed to bypass regional limitations. For example, a service in country A requires a phone number from country A, but your phone number is from country B. You ask a friend from country A to install this app and you will be able to receive SMS from the service in country B.\nHowever, since this is a pretty simple application, it can also serve other purposes.</string>
    <string name="about_question2">Should I be careful about something in particular?</string>
    <string name="about_answer2">Yes, a few things:\n- If you are about to ask someone to install this app, you have to trust your contact. This person will be able to read the messages.\n- It\'s possible to create redirection loops between 2+ devices. It\'s highly recommended to avoid this even if Android has built-in securities.\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY […]. See the GNU General Public License for more details.</string>
    <string name="about_question3">Can I remove the notification in status bar when redirection is enabled?</string>
    <string name="about_answer3">Yes, in recent Android versions, you have to do a long press on the notification to access the \"hide notification\" feature.</string>
    <string name="about_question4">I don\'t want to be notified about redirected SMS. How to disable notifications for specific contacts?</string>
    <string name="about_answer4">This setting depends on your SMS application. With Silence or Signal, you can disable notifications in conversation parameters.</string>
    <string name="about_question5">How to use the advanced input mode?</string>
    <string name="about_answer5">This mode allows you to redirect SMS based on regexp rules. Ie, you can redirect all incoming SMS using .* or all incoming SMS from Switzerland using \\+41.*\nPlease note that the number will be in E164 format.</string>

    <string name="description_empty_illustration">Empty list</string>
    <string name="description_right_arrow">Right arrow</string>
    <string name="description_delete_icon">Delete</string>
    <string name="description_send_sms_illustration">Send SMS</string>
    <string name="description_add_redirection_button">Add a redirection button</string>
    <string name="description_help_button">Help button</string>

</resources>
