<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/redirectlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.redirectlist.RedirectListFragment"
        tools:showIn="@layout/redirect_list_fragment">

    <LinearLayout
            android:id="@+id/phEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="96dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/fabAddRedirectEmpty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:contentDescription="@string/description_empty_illustration"
                app:srcCompat="@drawable/img_undraw_reading" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redirectlist_empty_redirection_list" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddRedirectEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/description_add_redirection_button"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp"
            app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>