<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/addredirectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_undraw_post_online" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:labelFor="@id/etSource"
                    android:text="@string/addredirect_info_automatically_redirect_sms_from" />

            <RelativeLayout
                    android:id="@+id/llSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                <EditText
                        android:id="@+id/etSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="24dp"
                        android:layout_toStartOf="@+id/btnAdvancedMode"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:importantForAutofill="no"
                        android:inputType="phone" />

                <ImageView
                        android:id="@+id/btnAdvancedMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/description_enable_advanced_mode"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_asterisk_grey_24dp" />

            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/etDestination"
                    android:text="@string/addredirect_info_to" />

            <EditText
                    android:id="@+id/etDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

            <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:enabled="false"
                    android:text="@string/addredirect_info_add" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>